<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnDisplayAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_all_island" />

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_all_island_with_5_stars" />

    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <Button
        android:id="@+id/btnInsertPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_island" />

</LinearLayout>